# playwright_nodejs

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
src/playwright_nodejs/: __init__.py  node.py
tests/: test.js  test_nodejs.py
